channel-streams/deploy_samples/k8s/libcluster-kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streamsnm
  labels:
    istio-injection: enabled
