channel-streams/deploy_samples/k8s/libcluster-kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: adfstreams-gw
  namespace: streamsnm
spec:
  selector:
    istio: ingressgateway 
  servers:
    - port:
        name: secure-port
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: adfstreams-credential
      hosts:
        - adfstreams.example.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adfstreams-vs
  namespace: streamsnm
spec:
  hosts:
    - adfstreams.example.com
  gateways:
    - adfstreams-gw
  http:
    - match:
        - uri:
            prefix: /ext/channel
      rewrite:
        uri: /api/v1/channel-streams-ex/ext/channel
      route:
        - destination:
            host: adfstreams
            port:
              number: 8080
    - match:
        - uri:
            prefix: /health
      rewrite:
        uri: /api/v1/channel-streams-ex/health
      route:
        - destination:
            host: adfstreams
            port:
              number: 8080
          headers:
            response:
              add:
                access-control-allow-headers: "Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since,X-CSRF-Token,application-id,sub"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adfstreams-vs-epmd
  namespace: streamsnm
spec:
  hosts:
  - adfstreams-headless
  tcp:
  - match:
    - port: 4369
    route:
    - destination:
        host: adfstreams-headless
        port:
          number: 4369
